@@ -1,3 +1,9 @@
+### September 18, 2022
+
+* Added a test to add 3 IPs and call "clear" to the list.
+   * Noticed that the "clear" function only removes 2 of the 3.
+* Added an ugly hack to make "clear" work; there's almost certainly a better way, added a TODO.
+
 ### September 17, 2022
 
 * Add and List are working for the command line tool.
